@@ -307,6 +307,11 @@ To set the Miniflow autovalidator, use this command ::
 
     $ ovs-appctl dpif-netdev/miniflow-parser-set autovalidator
 
+A compile time option is available in order to test it with the OVS unit
+test suite. Use the following configure option ::
+
+    $ ./configure --enable-mfex-default-autovalidator
+
 Unit Test Miniflow Extract
 ++++++++++++++++++++++++++
 
