@@ -24,6 +24,17 @@ Post-v2.15.0
      * An optimized miniflow extract (mfex) implementation is now available,
        which uses CPU SIMD ISA to parse specific traffic profiles efficiently.
        Refer to the documentation for details on how to enable it at runtime.
+     * Cache results for CPU ISA checks, reduces overhead on repeated lookups.
+     * Add command line option to switch between mfex function pointers.
+     * Add miniflow extract auto-validator function to compare different
+       miniflow extract implementations against default implementation.
+     * Add study function to miniflow function table which studies packet
+       and automatically chooses the best miniflow implementation for that
+       traffic.
+     * Add AVX512 based optimized miniflow extract function for traffic type
+       IP/UDP.
+     * Add build time configure command to enable auto-validatior as default
+       miniflow implementation at build time.
    - ovs-ctl:
      * New option '--no-record-hostname' to disable hostname configuration
        in ovsdb on startup.
@@ -35,7 +46,6 @@ Post-v2.15.0
    - ovsdb-tool:
      * New option '--election-timer' to the 'create-cluster' command to set the
        leader election timer during cluster creation.
-
 
 v2.15.0 - 15 Feb 2021
 ---------------------
